Changes to Version 2.1-4

  o Bug fixed in one of the skewPower support functions; thans to Balazs Banfai
  
  o Added support for lmer objects in power transformations
  
  o Added support for skewPower family power transformations for lm and lmer objects
  
Changes to Version 2.1-3

  o Corrected documentation for mcPlots
  
  o added id.location argument to showLabels to vary location of labels
  
  o added fix for compatiblity with Rcmdr with missing data in several plotting functions.
  
  o deltaMethod() now reports confidence intervals.
  
  o print.summary.Anova.mlm() has new SSP and SSPE arguments to determine whether the corresponding matrices are printed (suggestion of Michael Friendly).
  
  o summary() and print() methods for Anova.mlm() can now report univariate ANOVAs (suggestion and some code by Michael Friendly).
  
  o added "value" and "vcov" attributes to objects returned by linearHypothesis() (after suggestions by Liviu Andronic and Steven Yen).
  
  o compareCoefs() now checks classes of models. 
  
  o small fixes/changes.

Changes to Version 2.1-2

  o Modified scatter3d() so that plots can be embedded in HTML.

Changes to Version 2.1-1

  o influencePlot now returns Cook's distance, not its square root.
    
  o Anova() now supports "coxme" objects (produced by coxme() in coxme package) (request of Philipp Sprenger).
    
  o Anova() now works via its default method with "vglm" objects produced by functions in the VGAM package; and the default method of linearHypothesis() again works with these objects (problem reported by Michael Friendly).
    
  o Fixed Anova.coxph() so that it takes account of method (ties) argument (bug reported by Karl Ove Hufthammer).
    
  o Improvements to Anova.default() so that a wider variety of model classes are accommodated (following request of Liviu Andronic.)
    
  o dataEllipse() now throws an error if there are too few colors for the number of groups (fixing bug reported by Ottorino Pantani).
    