@@ -6,6 +6,8 @@ Changes to Version 2.1-4
   
   o Added support for skewPower family power transformations for lm and lmer objects
   
+  o Added list, data.frame, and matrix methods for Boxplot(), suggestion of Michael Friendly
+  
 Changes to Version 2.1-3
 
   o Corrected documentation for mcPlots
